--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio of Ifaz</title>
 </head>
 <body>
-    
+  <section class="top-section">
+    <div class="half-width">
+        <h1>Welcome To</h1>
+    <h1><span class="my-name">Shoaib Ahmed's</span> World</h1>
+    <h3>Economist And Developer</h3>
+    <p>An economist is an expert who studies the relationship between a society's resources and its production or output. Economists study societies ranging from small, local communities to entire nations and even the global economy. Developer: Person or company that invests in and develops real estate, especially by subdividing the land into home sites and building houses.</p><br>
+    <a class="link-button" href="https://mail.google.com/mail/u/0/#inbox">Hire Me</a>
+    </div>
+    <div class="half-width">
+        <img src="images/my-bg (1).png" alt="bg">
+    </div>
+  </section>
 </body>
 </html>
