--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
     <h1><span class="my-name">Shoaib Ahmed's</span> World</h1>
     <h3>Economist And Developer</h3>
     <p>An economist is an expert who studies the relationship between a society's resources and its production or output. Economists study societies ranging from small, local communities to entire nations and even the global economy. Developer: Person or company that invests in and develops real estate, especially by subdividing the land into home sites and building houses.</p><br>
-    <a class="link-button" href="https://mail.google.com/mail/u/0/#inbox">Hire Me</a>
+    <a class="link-button" target="_blank" href="https://mail.google.com/mail/u/0/#inbox">Hire Me</a>
     </div>
     <div class="half-width">
-        <img src="images/my-bg (1).png" alt="bg">
+        <img src="images/jhankar.png" alt="bg">
+    </div>
+  </section>
+  <section class="dream-big">
+     <div class="half-width">
+        <img src="images/jhankar2.png" alt="">
+     </div>
+     <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a Web developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p><br>
+     <a  class="link-button" target="_blank" href="https://mail.google.com/mail/u/0/#inbox">DOWNLOAD RESUME</a>
     </div>
   </section>
 </body>
