--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Portfolio of Ifaz</title>
 </head>
 <body>
-  <section class="top-section">
+  <section class="top-section flex-display">
     <div class="half-width">
         <h1>Welcome To</h1>
     <h1><span class="my-name">Shoaib Ahmed's</span> World</h1>
@@ -23,7 +23,7 @@
         <img src="images/jhankar.png" alt="bg">
     </div>
   </section>
-  <section class="dream-big">
+  <section class="dream-big flex-display">
      <div class="half-width">
         <img src="images/jhankar2.png" alt="">
      </div>
@@ -34,5 +34,23 @@
      <a  class="link-button" target="_blank" href="https://mail.google.com/mail/u/0/#inbox">DOWNLOAD RESUME</a>
     </div>
   </section>
+  <section class="experience-area">
+    <h1>Experiences</h1>
+    <div class="flex-display">
+        <div class="experience-item" id="item-1">
+            <h2>full stack developer</h2>
+            <h3 class="my-name">2023-present|pro level developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+         </div>
+         <div class="experience-item" id="item-2">
+             <h2>junior web developer</h2>
+             <h3 class="my-name">2021-22|programming hero student</h3>
+             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+         </div>
+    </div>
+  </section>
 </body>
+  <footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+  </footer>
 </html>
